// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component Localization should render en-id 1`] = `
<footer
  className="container"
>
  <FooterLinks
    footerMessages={
      Object {
        "about": Object {
          "title": "About Us",
          "url": "https://jobstreet.co.id/en/about-us/",
        },
        "copyright": "Copyright © {year} JobStreet.com",
        "feedback": Object {
          "title": "Send Feedback",
          "url": "https://myjobstreet.jobstreet.co.id/home/feedback.php?site=id&sub=feedback",
        },
        "help": Object {
          "title": "Help",
          "url": "https://jobstreet.co.id/en/user/",
        },
        "link": Object {
          "title": "JobStreet International",
          "url": "https://www.jobstreet.com",
        },
        "privacy": Object {
          "title": "Privacy Policy",
          "url": "https://jobstreet.co.id/en/about-us/privacy-policy/",
        },
        "profile": Object {
          "title": "Work With Us",
          "url": "https://jobstreet.co.id/en/companies/778589-jobstreet",
        },
        "safe": Object {
          "title": "Safe Job Search Guide",
          "url": "https://jobstreet.co.id/en/about-us/safe-job-search-guide/",
        },
        "siteMap": Object {
          "title": "Site Map",
          "url": "https://jobstreet.co.id/sitemap.htm",
        },
        "terms": Object {
          "title": "Term of Use",
          "url": "https://jobstreet.co.id/en/about-us/terms-of-use/",
        },
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localization should render en-my 1`] = `
<footer
  className="container"
>
  <FooterLinks
    footerMessages={
      Object {
        "about": Object {
          "title": "About Us",
          "url": "https://jobstreet.com.my/en/about-us/",
        },
        "copyright": "Copyright © {year} JobStreet.com",
        "feedback": Object {
          "title": "Send Feedback",
          "url": "https://myjobstreet.jobstreet.co.my/home/feedback.php?site=id&sub=feedback",
        },
        "help": Object {
          "title": "Help",
          "url": "https://jobstreet.com.my/en/user/",
        },
        "link": Object {
          "title": "JobStreet International",
          "url": "https://www.jobstreet.com",
        },
        "privacy": Object {
          "title": "Privacy Policy",
          "url": "https://jobstreet.com.my/en/about-us/privacy-policy/",
        },
        "profile": Object {
          "title": "Work With Us",
          "url": "https://jobstreet.com.my/en/career/JobStreet.htm",
        },
        "safe": Object {
          "title": "Safe Job Search Guide",
          "url": "https://jobstreet.com.my/en/about-us/safe-job-search-guide/",
        },
        "siteMap": Object {
          "title": "Site Map",
          "url": "https://jobstreet.com.my/sitemap.htm",
        },
        "terms": Object {
          "title": "Term of Use",
          "url": "https://jobstreet.com.my/en/about-us/terms-of-use/",
        },
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localization should render en-ph 1`] = `
<footer
  className="container"
>
  <FooterLinks
    footerMessages={
      Object {
        "about": Object {
          "title": "About Us",
          "url": "https://jobstreet.com.ph/en/about-us/",
        },
        "copyright": "Copyright © {year} JobStreet.com",
        "feedback": Object {
          "title": "Send Feedback",
          "url": "https://myjobstreet.jobstreet.co.ph/home/feedback.php?site=id&sub=feedback",
        },
        "help": Object {
          "title": "Help",
          "url": "https://jobstreet.com.ph/en/user/",
        },
        "link": Object {
          "title": "JobStreet International",
          "url": "https://www.jobstreet.com",
        },
        "privacy": Object {
          "title": "Privacy Policy",
          "url": "https://jobstreet.com.ph/en/about-us/privacy-policy/",
        },
        "profile": Object {
          "title": "Work With Us",
          "url": "https://www.jobstreet.com.ph/en/companies/507168-jobstreet-philippines-inc-ph",
        },
        "safe": Object {
          "title": "Safe Job Search Guide",
          "url": "https://jobstreet.com.ph/en/about-us/safe-job-search-guide/",
        },
        "siteMap": Object {
          "title": "Site Map",
          "url": "https://jobstreet.com.ph/sitemap.htm",
        },
        "terms": Object {
          "title": "Term of Use",
          "url": "https://jobstreet.com.ph/en/about-us/terms-of-use/",
        },
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localization should render en-sg 1`] = `
<footer
  className="container"
>
  <FooterLinks
    footerMessages={
      Object {
        "about": Object {
          "title": "About Us",
          "url": "https://jobstreet.com.sg/en/about-us/",
        },
        "copyright": "Copyright © {year} JobStreet.com",
        "feedback": Object {
          "title": "Send Feedback",
          "url": "https://myjobstreet.jobstreet.co.sg/home/feedback.php?site=id&sub=feedback",
        },
        "help": Object {
          "title": "Help",
          "url": "https://jobstreet.com.sg/en/user/",
        },
        "link": Object {
          "title": "JobStreet International",
          "url": "https://www.jobstreet.com",
        },
        "privacy": Object {
          "title": "Privacy Policy",
          "url": "https://jobstreet.com.sg/en/about-us/privacy-policy/",
        },
        "profile": Object {
          "title": "Work With Us",
          "url": "https://jobstreet.com.sg/career/JobStreet.htm",
        },
        "safe": Object {
          "title": "Safe Job Search Guide",
          "url": "https://jobstreet.com.sg/en/about-us/safe-job-search-guide/",
        },
        "siteMap": Object {
          "title": "Site Map",
          "url": "https://jobstreet.com.sg/sitemap.htm",
        },
        "terms": Object {
          "title": "Term of Use",
          "url": "https://jobstreet.com.sg/en/about-us/terms-of-use/",
        },
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localization should render en-vn 1`] = `
<footer
  className="container"
>
  <FooterLinks
    footerMessages={
      Object {
        "about": Object {
          "title": "About Us",
          "url": "https://jobstreet.vn/en/about-us/",
        },
        "copyright": "Copyright © {year} JobStreet.com",
        "feedback": Object {
          "title": "Send Feedback",
          "url": "https://myjobstreet.jobstreet.vn/home/feedback.php?site=vn&sub=feedback",
        },
        "help": Object {
          "title": "Help",
          "url": "https://jobstreet.vn/en/user/",
        },
        "link": Object {
          "title": "JobStreet International",
          "url": "https://www.jobstreet.com",
        },
        "privacy": Object {
          "title": "Privacy Policy",
          "url": "https://jobstreet.vn/en/about-us/privacy-policy/",
        },
        "profile": Object {
          "title": "Work With Us",
          "url": "https://jobstreet.vn/en/companies/762582-jobstreet-company-limited-vn",
        },
        "safe": Object {
          "title": "Safe Job Search Guide",
          "url": "https://jobstreet.vn/en/about-us/safe-job-search-guide/",
        },
        "siteMap": Object {
          "title": "Site Map",
          "url": "https://jobstreet.vn/sitemap.htm",
        },
        "terms": Object {
          "title": "Term of Use",
          "url": "https://jobstreet.vn/en/about-us/terms-of-use/",
        },
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localization should render id-id 1`] = `
<footer
  className="container"
>
  <FooterLinks
    footerMessages={
      Object {
        "about": Object {
          "title": "Tentang Kami",
          "url": "https://jobstreet.co.id/id/about-us/",
        },
        "copyright": "Hak Cipta © {year} JobStreet.com",
        "feedback": Object {
          "title": "Kirim Saran",
          "url": "https://myjobstreet.jobstreet.co.id/home/feedback.php?site=id&sub=feedback",
        },
        "help": Object {
          "title": "Bantuan",
          "url": "https://jobstreet.co.id/id/user/",
        },
        "link": Object {
          "title": "JobStreet International",
          "url": "https://www.jobstreet.com",
        },
        "privacy": Object {
          "title": "Kebijakan Kerahasiaan",
          "url": "https://jobstreet.co.id/id/about-us/kebijakan-privasi/",
        },
        "profile": Object {
          "title": "Berkarier bersama Kami",
          "url": "https://jobstreet.co.id/en/companies/778589-jobstreet",
        },
        "safe": Object {
          "title": "Panduan Mencari Kerja Secara Aman",
          "url": "https://jobstreet.co.id/id/about-us/panduan-dan-tips-mencari-kerja-online-secara-aman/",
        },
        "siteMap": Object {
          "title": "Site Map",
          "url": "https://jobstreet.co.id/sitemap.htm",
        },
        "terms": Object {
          "title": "Ketentuan Penggunaan",
          "url": "https://jobstreet.co.id/id/about-us/ketentuan-penggunaan/",
        },
      }
    }
  />
  <p
    className="copyright"
  >
    Hak Cipta © 2017 JobStreet.com
  </p>
</footer>
`;

exports[`Footer component Localization should render vi-vn 1`] = `
<footer
  className="container"
>
  <FooterLinks
    footerMessages={
      Object {
        "about": Object {
          "title": "Về JobStreet",
          "url": "https://jobstreet.vn/vi/about-us/",
        },
        "copyright": "Copyright © {year} JobStreet.com",
        "feedback": Object {
          "title": "Gửi Phản Hồi",
          "url": "https://myjobstreet.jobstreet.vn/home/feedback.php?site=vn&sub=feedback",
        },
        "help": Object {
          "title": "Trợ Giúp",
          "url": "https://jobstreet.vn/vi/user/",
        },
        "link": Object {
          "title": "JobStreet Quốc Tế",
          "url": "https://www.jobstreet.com",
        },
        "privacy": Object {
          "title": "Chính Sách Bảo Mật",
          "url": "https://jobstreet.vn/vi/about-us/kebijakan-privasi/",
        },
        "profile": Object {
          "title": "Cơ Hội Nghề Nghiệp",
          "url": "https://jobstreet.vn/companies/762582-jobstreet-company-limited-vn",
        },
        "safe": Object {
          "title": "Mẹo Tìm Việc An Toàn",
          "url": "https://jobstreet.vn/vi/about-us/huong-dan-va-bi-quyet-tim-viec-truc-tuyen-an-toan/",
        },
        "siteMap": Object {
          "title": "Site Map",
          "url": "https://jobstreet.vn/sitemap.htm",
        },
        "terms": Object {
          "title": "Điều Khoản Sử Dụng",
          "url": "https://jobstreet.vn/vi/about-us/chinh-sach-bao-mat/",
        },
      }
    }
  />
  <p
    className="copyright"
  >
    Copyright © 2017 JobStreet.com
  </p>
</footer>
`;
